--- a/backend/foodchain/templates/admin/foodchain/recipient/change_list.html
+++ b/backend/foodchain/templates/admin/foodchain/recipient/change_list.html
@@ -1,7 +1,7 @@
 {% extends "admin/change_list.html" %}
 {% block object-tools-items %}
   <li>
-    <a href="{% url 'admin:recipient-import-csv' %}" class="changelink">
+    <a href="{% url 'admin:recipient-import-csv' %}" class="changelink btn btn-success">
       Import CSV file
     </a>
   </li>
