--- a/backend/foodchain/templates/admin/foodchain/planner.html
+++ b/backend/foodchain/templates/admin/foodchain/planner.html
@@ -4,7 +4,7 @@
 
 <h1>Route Planner</h1>
 
-<h4>Parameters</h4>
+<h2>Parameters</h2>
 <form method="post">{% csrf_token %}
 <table>
 {{ form }}
@@ -12,8 +12,40 @@
 <input type="submit" name="submit" value="Reschedule" />
 </form>
 
-<h4>Current Schedule</h4>
+<h2>Current Schedule</h2>
 
+{% if drives %}
+
+<h4>Kitchen Statistics</h4>
+<table cellpadding="8">
+<tr><th></th><th>Number of drives</th><th>Number of meals</th><th>Maximum capacity</th></tr>
+{% for kitchen in kitchens %}
+<tr><th>{{ kitchen.kitchen_id }}</th><td>{{ kitchen.num_drives }}</td>
+<td>{{ kitchen.num_meals }}</td><td>{{ kitchen.capacity }}</td></tr>
+{% endfor %}
+</table>
+<h4>Drives</h4>
+<table cellpadding="4">
+<tr><th>Kitchen</th><th>Meals</th><th>Duration</th><th>Route</th></tr>
+{% for drive in drives %}
+<tr>
+<td>{{ drive.kitchen.kitchen_id }}</td>
+<td style="text-align: center">{{ drive.meals_to_deliver }}</td>
+<td></td>
+<td>
+	<ol>
+	{% for delivery in drive.delivery_set.all %}
+		<li>{{ delivery.recipient.nickname }}, {{ delivery.recipient.postcode }}</li>
+	{% endfor %}
+	</ol>
+</td>
+</tr>
+{% endfor %}
+</table>
+
+{% else %}
+Plan is not available.
+{% endif %}
 
 
 {% endblock %}
