--- a/backend/foodchain/templates/admin/foodchain/planner.html
+++ b/backend/foodchain/templates/admin/foodchain/planner.html
@@ -9,7 +9,7 @@
 <table>
 {{ form }}
 </table>
-<input type="submit" name="submit" value="Reschedule" />
+<input type="submit" name="submit" value="Reschedule" /> <input type="submit" name="clear_plan" value="Clear plan" />
 </form>
 
 <h2>Current Schedule</h2>
