--- a/backend/foodchain/templates/admin/custom_index.html
+++ b/backend/foodchain/templates/admin/custom_index.html
@@ -1,8 +1,10 @@
 {% extends 'admin/index.html' %}
 
 {% block content %}
-<div style="float: left; margin: 20px 0">
-<a href="{% url 'admin:route-planner' %}"><big>Route Planner</big></a>
-</div>
+
 {{ block.super }}
+
+<div style="float: left; margin: 20px 0">
+<a href="{% url 'admin:route-planner' %}"><p class="lead">Route Planner</p></a>
+</div>
 {% endblock %}
