--- a/backend/foodchain/templates/admin/custom_index.html
+++ b/backend/foodchain/templates/admin/custom_index.html
@@ -4,7 +4,7 @@
 
 {{ block.super }}
 
-<div style="float: left; margin: 20px 0">
+<div class="span3">
 <a href="{% url 'admin:route-planner' %}"><p class="lead">Route Planner</p></a>
 </div>
 {% endblock %}
