--- a/backend/foodchain/templates/admin/foodchain/planner.html
+++ b/backend/foodchain/templates/admin/foodchain/planner.html
@@ -2,22 +2,25 @@
 
 {% block content %}
 
-<h1>Route Planner</h1>
+<h1 class="lead">Route Planner</h1>
 
-<h2>Parameters</h2>
+<h2 class="lead">Parameters</h2>
 <form method="post">{% csrf_token %}
 <table>
 {{ form }}
 </table>
-<input type="submit" name="submit" value="Reschedule" /> <input type="submit" name="clear_plan" value="Clear plan" />
+<input type="submit" name="submit" value="Reschedule" class="btn btn-primary" />
+<input type="submit" name="clear_plan" value="Clear plan" class="btn btn-success" />
 </form>
 
-<h2>Current Schedule</h2>
+<hr>
+
+<h2 class="lead">Current Schedule</h2>
 
 {% if drives %}
 
-<h4>Kitchen Statistics</h4>
-<table cellpadding="8">
+<h4 class="lead">Kitchen Statistics</h4>
+<table class="table table-hover">
 <tr><th></th><th>Number of drives</th><th>Number of meals</th><th>Maximum capacity</th></tr>
 {% for kitchen in kitchens %}
 <tr><th>{{ kitchen.kitchen_id }}</th><td>{{ kitchen.num_drives }}</td>
