planner.html fix

--- a/backend/foodchain/templates/admin/foodchain/planner.html
+++ b/backend/foodchain/templates/admin/foodchain/planner.html
@@ -27,7 +27,7 @@
 <td>{{ kitchen.num_meals }}</td><td>{{ kitchen.capacity }}</td></tr>
 {% endfor %} 
 </table>
--<h4>Drives</h4>
+<h4>Drives</h4>
 
 <table cellpadding="4">
 <tr><th>Kitchen</th><th>Meals</th><th></th><th>Route</th></tr>
