--- a/backend/foodchain/templates/admin/foodchain/planner.html
+++ b/backend/foodchain/templates/admin/foodchain/planner.html
@@ -27,7 +27,7 @@ var jsData = {{ js_data|safe }};
 
   function initialize() {
     var mapOptions = {
-      center: new google.maps.LatLng(51.5072, -0.1075),
+      center: new google.maps.LatLng(51.5072, -0.0675),
       zoom: 11,
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
@@ -42,13 +42,35 @@ var jsData = {{ js_data|safe }};
     		title: k.kitchen_id
     	});
     }
+    for (var i = 0; i < jsData.recipients.length; i++) {
+    	var r = jsData.recipients[i];
+    	new google.maps.Marker({
+    		map: googleMap,
+    		position: new google.maps.LatLng(r.lat, r.lng),
+    		title: r.nickname + ' (' + r.booking_id + ')',
+    		icon: 'http://maps.google.com/mapfiles/ms/icons/yellow-dot.png'
+    	});
+    }
+    for (var i = 0; i < jsData.drives.length; i++) {
+    	var d = jsData.drives[i];
+    	var coords = [];
+    	for (var j = 0; j < d.length; j++) {
+    		coords.push(new google.maps.LatLng(d[j][0], d[j][1]));
+    	}
+    	new google.maps.Polyline({
+    		path: coords,
+    		geodesic: true,
+    	    strokeColor: '#407F00',
+    	    strokeOpacity: 1.0,
+    	    strokeWeight: 2,
+    	    map: googleMap
+    	});
+    }
   }
   google.maps.event.addDomListener(window, 'load', initialize);
 </script>
-<div id="map-canvas" style="width: 700px; height: 500px"></div>
+<div id="map-canvas" style="width: 700px; height: 600px"></div>
 
-<h4>Kitchen Statistics</h4>
-<table cellpadding="8">
 <h4 class="lead">Kitchen Statistics</h4>
 <table class="table table-hover">
 <tr><th></th><th>Number of drives</th><th>Number of meals</th><th>Maximum capacity</th></tr>
