--- a/backend/foodchain/templates/admin/custom_index.html
+++ b/backend/foodchain/templates/admin/custom_index.html
@@ -1,5 +1,6 @@
-{% extends 'admin/index.html' %}
 
+{% extends 'admin/index.html' %}
+<link rel="stylesheet" href="{{ STATIC_URL }}swatch.css">
 {% block content %}
 
 {{ block.super }}
