More UI changes

--- a/backend/foodchain/templates/admin/base_site.html
+++ b/backend/foodchain/templates/admin/base_site.html
@@ -15,7 +15,7 @@
 {% block title %}{{ title }} | {% trans 'the food chain' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name" class="brand"><img src="{% static 'logo.png' %}" /></h1>
+<h1 id="site-name" class="brand"><a href="{% url 'admin:index' %}"><img src="{% static 'logo.png' %}" style="height: 40px" /></a> <a href="{% url 'admin:route-planner' %}" class="changelink btn btn-primary" style="margin-left: 20px">Route Planner</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
