--- a/backend/foodchain/templates/admin/base_site.html
+++ b/backend/foodchain/templates/admin/base_site.html
@@ -10,6 +10,7 @@
 	background-image: none;
 }
 </style>
+<link rel="stylesheet" href="{{ STATIC_URL }}swatch.css">
 {% endblock %}
 
 {% block title %}{{ title }} | {% trans 'the food chain' %}{% endblock %}
