--- a/backend/foodchain/templates/admin/foodchain/import_csv.html
+++ b/backend/foodchain/templates/admin/foodchain/import_csv.html
@@ -1,6 +1,7 @@
 {% extends 'admin/base_site.html' %}
 
 {% block content %}
+<h1>CSV Data Import</h1>
 
 <form method="post" enctype="multipart/form-data">
 {% csrf_token %}
