--- a/backend/foodchain/templates/admin/base_site.html
+++ b/backend/foodchain/templates/admin/base_site.html
@@ -5,6 +5,12 @@
 {{ block.super }}
 
 <style type="text/css">
+.affix-top{
+  display: none;
+}
+#content-main{
+  padding-top: 35px;
+}
 #nav-menu-top-bar {
 	background-color: #49aa43;
 	background-image: none;
